--- a/index.html
+++ b/index.html
@@ -11,21 +11,40 @@
       <div id="historique"></div>
       <div id="affichage">
         <div id="saisi"></div>
-        <div id="resultat"></div>
+        <div id="resultat-wrapper">
+          <button id="expand" class="icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="20px"
+              viewBox="0 -960 960 960"
+              width="20px"
+              fill="currentColor"
+            >
+              <path
+                d="M480-80 240-320l57-57 183 183 183-183 57 57L480-80ZM298-584l-58-56 240-240 240 240-58 56-182-182-182 182Z"
+              />
+            </svg>
+          </button>
+          <div id="resultat"></div>
+        </div>
       </div>
       <div id="clavier">
-        <div id="specifique">
-          <button class="bouton">Racine</button>
-          <button class="bouton">Pi</button>
-          <button class="bouton">^</button>
-          <button class="bouton">!</button>
+        <div id="specifique" class="desactive">
+          <button class="bouton operateur" data-ope="/">Racine</button>
+          <button class="bouton operateur" data-ope="/">Pi</button>
+          <button class="bouton operateur" data-ope="/">^</button>
+          <button class="bouton operateur" data-ope="/">!</button>
+          <button class="bouton operateur" data-ope="/">sin</button>
+          <button class="bouton operateur" data-ope="/">cos</button>
+          <button class="bouton operateur" data-ope="/">tan</button>
+          <button class="bouton operateur" data-ope="/">e</button>
         </div>
         <div id="base">
           <button id="clear" class="bouton">AC</button>
           <button id="parenthese" class="bouton operateur" data-ope="()">
-            ()
+            ( )
           </button>
-          <button class="bouton operateur" data-ope="%">%</button>
+          <button id="pourcent" class="bouton operateur" data-ope="%">%</button>
           <button class="bouton operateur" data-ope="/">/</button>
           <button class="bouton chiffre" data-ope="7">7</button>
           <button class="bouton chiffre" data-ope="8">8</button>
@@ -41,7 +60,19 @@
           <button class="bouton operateur" data-ope="+">+</button>
           <button class="bouton chiffre" data-ope="0">0</button>
           <button id="virgule" class="bouton chiffre" data-ope=".">,</button>
-          <button id="effacer" class="bouton"><-</button>
+          <button id="effacer" class="bouton">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="20px"
+              viewBox="0 -960 960 960"
+              width="20px"
+              fill="currentColor"
+            >
+              <path
+                d="m456-320 104-104 104 104 56-56-104-104 104-104-56-56-104 104-104-104-56 56 104 104-104 104 56 56Zm-96 160q-19 0-36-8.5T296-192L80-480l216-288q11-15 28-23.5t36-8.5h440q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H360ZM180-480l180 240h440v-480H360L180-480Zm400 0Z"
+              />
+            </svg>
+          </button>
           <button id="egal" class="bouton" data-ope="=">=</button>
         </div>
       </div>
