--- a/index.html
+++ b/index.html
@@ -6,12 +6,78 @@
     <title>Ma Calculette</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body>
-    <section id="calculette">
-      <div id="historique"></div>
-      <div id="affichage">
-        <div id="saisi"></div>
-        <div id="resultat-wrapper">
+  <body id="body" data-theme="light">
+    <section
+      id="calculette"
+      class="calculette"
+      data-history="close"
+      data-spec="close"
+    >
+      <div id="affichage" class="aff">
+        <div id="button-parameters" class="btnLine">
+          <button id="parameter" class="icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="20px"
+              viewBox="0 -960 960 960"
+              width="20px"
+              fill="currentColor"
+            >
+              <path
+                d="M480-160q-33 0-56.5-23.5T400-240q0-33 23.5-56.5T480-320q33 0 56.5 23.5T560-240q0 33-23.5 56.5T480-160Zm0-240q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm0-240q-33 0-56.5-23.5T400-720q0-33 23.5-56.5T480-800q33 0 56.5 23.5T560-720q0 33-23.5 56.5T480-640Z"
+              />
+            </svg>
+          </button>
+          <div id="overlay" class="overlay is-hidden"></div>
+          <div id="overlayDark" class="overlay dark is-hidden"></div>
+
+          <div id="menu-parameter" class="menu is-hidden">
+            <button class="menu-button" id="theme">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                height="20px"
+                viewBox="0 -960 960 960"
+                width="20px"
+                fill="currentColor"
+              >
+                <path
+                  d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Zm0-80q88 0 158-48.5T740-375q-20 5-40 8t-40 3q-123 0-209.5-86.5T364-660q0-20 3-40t8-40q-78 32-126.5 102T200-480q0 116 82 198t198 82Zm-10-270Z"
+                />
+              </svg>
+              Thème sombre
+            </button>
+            <button class="menu-button" id="eraseHist">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                height="20px"
+                viewBox="0 -960 960 960"
+                width="20px"
+                fill="currentColor"
+              >
+                <path
+                  d="M120-40v-280q0-83 58.5-141.5T320-520h40v-320q0-33 23.5-56.5T440-920h80q33 0 56.5 23.5T600-840v320h40q83 0 141.5 58.5T840-320v280H120Zm80-80h80v-120q0-17 11.5-28.5T320-280q17 0 28.5 11.5T360-240v120h80v-120q0-17 11.5-28.5T480-280q17 0 28.5 11.5T520-240v120h80v-120q0-17 11.5-28.5T640-280q17 0 28.5 11.5T680-240v120h80v-200q0-50-35-85t-85-35H320q-50 0-85 35t-35 85v200Zm320-400v-320h-80v320h80Zm0 0h-80 80Z"
+                />
+              </svg>
+              Effacer l'historique
+            </button>
+          </div>
+          <button id="historyButton" class="icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="20px"
+              viewBox="0 -960 960 960"
+              width="20px"
+              fill="currentColor"
+            >
+              <path
+                d="M480-120q-138 0-240.5-91.5T122-440h82q14 104 92.5 172T480-200q117 0 198.5-81.5T760-480q0-117-81.5-198.5T480-760q-69 0-129 32t-101 88h110v80H120v-240h80v94q51-64 124.5-99T480-840q75 0 140.5 28.5t114 77q48.5 48.5 77 114T840-480q0 75-28.5 140.5t-77 114q-48.5 48.5-114 77T480-120Zm112-192L440-464v-216h80v184l128 128-56 56Z"
+              />
+            </svg>
+          </button>
+        </div>
+        <div id="historique" class="hist is-hidden"></div>
+        <div id="saisi" class="saisi"></div>
+        <div id="resultat-wrapper" class="displayResult">
           <button id="expand" class="icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -28,18 +94,30 @@
           <div id="resultat"></div>
         </div>
       </div>
-      <div id="clavier">
-        <div id="specifique" class="desactive">
-          <button class="bouton operateur" data-ope="/">Racine</button>
-          <button class="bouton operateur" data-ope="/">Pi</button>
-          <button class="bouton operateur" data-ope="/">^</button>
-          <button class="bouton operateur" data-ope="/">!</button>
-          <button class="bouton operateur" data-ope="/">sin</button>
-          <button class="bouton operateur" data-ope="/">cos</button>
-          <button class="bouton operateur" data-ope="/">tan</button>
-          <button class="bouton operateur" data-ope="/">e</button>
+      <div id="clavier" class="cla">
+        <div id="specifique" class="base specifique is-hidden">
+          <button id="racineCarre" class="bouton operateur" data-ope="√">
+            √
+          </button>
+          <button id="pi" class="bouton operateur" data-ope="π">π</button>
+          <button id="exposant" class="bouton operateur" data-ope="^">^</button>
+          <button id="factorielle" class="bouton operateur" data-ope="!">
+            !
+          </button>
+          <button id="sinus" class="bouton operateur" data-ope="sin">
+            sin
+          </button>
+          <button id="cosinus" class="bouton operateur" data-ope="cos">
+            cos
+          </button>
+          <button id="tangeante" class="bouton operateur" data-ope="tan">
+            tan
+          </button>
+          <button id="exponentielle" class="bouton operateur" data-ope="e">
+            e
+          </button>
         </div>
-        <div id="base">
+        <div id="base" class="base">
           <button id="clear" class="bouton">AC</button>
           <button id="parenthese" class="bouton operateur" data-ope="()">
             ( )
@@ -77,6 +155,13 @@
         </div>
       </div>
     </section>
+    <div class="modal is-hidden" id="confirmModal">
+      <div class="modal-content">
+        <h2>Etes-vous sur d'effacer l'historique ?</h2>
+        <button class="menu-button" id="fermerModal">Fermer</button>
+        <button class="menu-button" id="erase">Effacer</button>
+      </div>
+    </div>
     <script src="./script.js" defer></script>
   </body>
 </html>
